[package]
name = "mirage-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bertlib"
path = "src/bertlib.rs"
crate-type = ["cdylib"]

[dependencies]
libloading = "0.8.1"
winapi = { version = "0.3.9", features = ["winuser","libloaderapi"] }
lazy_static = "1.4.0"